envoy-gw/manifests/custom_ep.yaml
# 自定义配置EnvoyProxy
# Envoy Gateway提供了一个名为EnvoyProxy的自定义资源定义（CRD）,可与GatewayClass中的ParametersRef关联,
# 使得集群管理员能够自定义托管的EnvoyProxy部署和服务。

# 要使EnvoyProxy配置生效, 首先需要在GatewayClass中配置ParametersRef
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: proxy-config
    namespace: envoy-gateway-system
